# base-image

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  build-docker.sh  build.sh  builder.py  config  depends  packages  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-and-upload.yml  qa.yml
export-image/: prerun.sh
export-image/04-finalise/: 01-run.sh
export-noobs/00-release/files/: os.json
scripts/: common
stage0/00-configure-apt/: 01-packages
stage1/00-boot-files/files/: config.txt
stage1/01-sys-tweaks/: 00-packages
stage1/01-sys-tweaks/00-patches/: 01-bashrc.diff
stage1/01-sys-tweaks/files/: fstab
stage1/02-net-tweaks/: 00-run.sh
stage2/01-sys-tweaks/: 00-packages  01-run.sh
stage2/01-sys-tweaks/00-patches/: 07-resize-init.diff
stage2/01-sys-tweaks/files/: firstboot.service  firstboot.sh
stage2/02-net-tweaks/: 00-packages  01-run.sh
tree/: Dockerfile.patch  README.md  build-docker.sh.patch-arm64  build-docker.sh.patch-armhf
tree/export-image/: prerun.sh
tree/export-image/01-user-rename/: 01-run.sh.patch
tree/export-image/04-set-partuuid/: 00-run.sh
tree/export-image/05-finalise/: 01-run.sh.patch
tree/stage0/: prerun.sh.armhf  prerun.sh.patch
tree/stage0/00-configure-apt/: 00-run.sh.patch
tree/stage0/00-configure-apt/files/: docker.list  docker.sources  raspi.list  sources.list
tree/stage1/00-boot-files/files/: cmdline.txt.patch  config.txt.patch
tree/stage1/01-sys-tweaks/files/: fstab.patch
tree/stage2/01-sys-tweaks/: 00-run-chroot.sh  01-run.sh.patch
tree/stage2/01-sys-tweaks/00-patches/: 07-resize-init.diff
tree/stage2/01-sys-tweaks/files/: disable-swap.conf  issue  offspot.conf  offspot.json  offspot.yaml  offspot_bi_init_resize.sh
tree/stage2/02-net-tweaks/: 01-run.sh.patch
tree/stage2/02-net-tweaks/files/: dhcpcd.conf  internet-check  internet-check.service  internet-check.timer  iptables-restore.service
tree/stage2/04-cloud-init/: 00-packages.patch
tree/stage2/05-wifi-firmware/: 01-run.sh
tree/stage2/05-wifi-firmware/files/: brcmfmac43455-sdio.bin_2021-10-05_3rd-trial-minimal
tree/stage2/06-docker-tweaks/: 01-run.sh
tree/stage2/06-docker-tweaks/files/: balena.service  balena.socket  compose.yml  docker-compose.service  docker-images-loader.py  docker-images-loader.service  docker.sh
tree/stage2/07-sys-configurator/: 01-run.sh
tree/stage2/07-sys-configurator/files/: mekhenet.py  mekhenet.service  offspot-runtime.service
tree/stage2/08-log-tweaks/: 01-run.sh
tree/stage2/08-log-tweaks/00-patches/: 01-rsyslog.diff  series
tree/stage2/08-log-tweaks/files/: 00-offspot-volatile.conf  motd  offspot-logs
